--- a/run3.html
+++ b/run3.html
@@ -173,6 +173,8 @@ class Agent extends Avatar {
 				super.setFleeTarget (preditor.pos.x, preditor.pos.y, preditor.pos.z)
 			if (this.fsm.state === 'idle')
 				super.setBrake (10);
+			if (this.fsm.state === 'stop')
+				super.setBrake (10);	
 			
 		}
 		if (this.stateSign) {
@@ -188,6 +190,10 @@ class Agent extends Avatar {
 				this.stateSign.children[1].material.visible = true;
 				this.stateSign.children[0].material.visible = false;
 			}
+			if (this.fsm.state === 'stop') {
+				this.stateSign.children[2].material.visible = true;
+				this.stateSign.children[1].material.visible = false;
+			}
 		}
    }
 }
@@ -199,8 +205,9 @@ function initFSM () {
 	let fsm = new StateMachine({
 		init: 'idle',
 		transitions: [
-			{ name: 'approach', from: 'idle',  to: 'flee' },
+			{ name: 'approach', from: 'idle', to: 'flee' },
 			{ name: 'depart',   from: 'flee', to: 'idle'},
+			{ name: 'halt',     from: 'flee', to: 'stop'},
 		]
 	});
   
@@ -243,13 +250,15 @@ function stateSign () {
 	let loader = new THREE.TextureLoader();
 	let idleMap = loader.load ("https://i.imgur.com/wMH2lff.png");
 	let fleeMap = loader.load ("https://i.imgur.com/T3xmLmy.png");
-	
+	let haltMap = loader.load ("https://i.imgur.com/dZE3xnz.png");
 	let idleMesh = new THREE.Mesh (new THREE.PlaneGeometry(16,10), new THREE.MeshBasicMaterial(
 		{map: idleMap, transparent: true, alphaTest: 1, side:THREE.DoubleSide}));
 	let fleeMesh = new THREE.Mesh (new THREE.PlaneGeometry(16,10), new THREE.MeshBasicMaterial(
 		{map: fleeMap, transparent: true, alphaTest: 1, side:THREE.DoubleSide}));
+	let haltMesh = new THREE.Mesh (new THREE.PlaneGeometry(16,10), new THREE.MeshBasicMaterial(
+		{map: haltMap, transparent: true, alphaTest: 1, side:THREE.DoubleSide}));	
 	let preyStateSign = new THREE.Group();
-	preyStateSign.add (idleMesh,fleeMesh);
+	preyStateSign.add (idleMesh,fleeMesh,haltMesh);
 	return preyStateSign;
 	
 }
@@ -262,8 +271,8 @@ function init() {
 	camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 1, 1000);
 	camera.position.z = 120;
 	camera.position.y = 100;
-	gyro = new Gyroscope();
-	gyro.add(camera);
+	//gyro = new Gyroscope();
+	//gyro.add(camera);
 	
 	var gridXZ = new THREE.GridHelper(240, 24, 'red', 'white');
 	scene.add(gridXZ);
@@ -289,8 +298,8 @@ function init() {
 	////////////////////////
 
 	preditor = new Agent (randomPosZX(-100,100), agentMesh (2,'red'), 'ghost');
-	console.log (preditor.pos);
-	preditor.mesh.add(gyro);
+	//console.log (preditor.pos);
+	//preditor.mesh.add(gyro);
 
 	for (let i = 0; i < 3; i++) {
 		prey = new Agent (randomPosZX(-100,100),agentMesh (1,'cyan'), 'human', initFSM());
@@ -308,8 +317,8 @@ function init() {
 function randomPosZX(min,max) {
 	let x = min + (max-min)*Math.random();
 	let z = min + (max-min)*Math.random();
-	return new THREE.Vector3(60,0,40);
-	//return new THREE.Vector3(x,0,z);
+	
+	return new THREE.Vector3(x,0,z);
 }
 
 
@@ -322,7 +331,7 @@ function animate() {
 	requestAnimationFrame(animate);
 	render();
   
-	preditor.update(dt);
+	preditor.update(dt*2);
 	
 	preys.forEach(function(prey) { 
 		prey.update(dt);
@@ -331,11 +340,15 @@ function animate() {
 	  
 		let BW = 10;
 		// event firing
+		if (prey.fsm.state === "flee" && distanceNow < animate.distance && distanceNow < 30-BW/2)
+			prey.fsm.halt();
+			
 		if (prey.fsm.state === "flee" && distanceNow > animate.distance && distanceNow > 40+BW/2)
 			prey.fsm.depart();
 
 		if (prey.fsm.state === "idle" && distanceNow < animate.distance && distanceNow < 40-BW/2)
 			prey.fsm.approach();
+		
 		
 		//console.log (prey.fsm.state);
 	  
